Dvernon/delegation fix (#6)
* More cleanup of delegations, and adding delete

* Adding deployment files
